first commit om heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <h4><p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p><h4>
+    
     <div class="jumbotron"style="background-color: #31b0d5;">
       <center><h2><strong>Leave Management Solution</strong></h2></center>
     </div>
