--- a/app/views/absences/index.html.erb
+++ b/app/views/absences/index.html.erb
@@ -1,7 +1,5 @@
 <div class="container">
-  <!-- <p id="notice"><%#= notice %></p> -->
   <center><h1>List of Leave-Applications</h1></center>
-
   <% if current_user.role == "employee" %>
     <%= link_to 'Create leave application', new_absence_path ,:style=>"margin-bottom: 15px;",:class=>"pull-right btn btn-info"%>
     <br>
@@ -11,21 +9,18 @@
         <tr>
           <th>Reason</th>
           <th>Date</th>
-          <!-- <th>To date</th> -->
           <th>Manager email</th>
           <th>Status</th>
           <th colspan="3">show link</th>
         </tr>
       </thead>
-
       <tbody>
         <% if !current_user.users_absences.nil? %>
           <% current_user.users_absences.each do |absence| %>
             <tr>
             <% @absence = Absence.find(absence.absence_id) %>              
               <td><%= @absence.reason %></td>
-              <td><%= @absence.from_date %></td>
-              <!-- <td><%#= @absence.to_date %></td> -->
+              <td><%= @absence.date %></td>
               <td><%= User.find(@absence.manager_id).email %></td>
               <% if absence.status.nil? %>
                 <td><strong><%= "pending" %></strong></td>
@@ -33,8 +28,7 @@
                 <td><strong><%= absence.status %></strong></td>
               <% end %>
               <td><%= link_to 'Show', @absence %></td>
-              <!-- <td><%#= link_to 'Edit', edit_absence_path(absence) %></td>
-              <td><%#= link_to 'Destroy', absence, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+              <!--<td><%#= link_to 'Destroy', absence, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
             </tr>
           <% end %>
         <%end %>
@@ -48,7 +42,6 @@
         <tr>
           <th>Reason</th>
           <th>Date</th>
-          <!-- <th>To date</th> -->
           <th>Manager name</th>
           <th>status</th>
           <th>actions</th>
@@ -64,8 +57,7 @@
         <% if absence.status.nil? %>
           <tr>
             <td><%= @absence.reason %></td>
-            <td><%= @absence.from_date %></td>
-            <!-- <td><%#= @absence.to_date %></td> -->
+            <td><%= @absence.date %></td>
             <td><%= User.find(@absence.manager_id).email %></td>
             
             <% if absence.status.present? %>
@@ -75,7 +67,6 @@
             <% end %>
             <% if absence.is_approve == false %>
               <td>
-                <%#= link_to "reject", absence_absence_reject_path(@absence) , data: { confirm: 'Are you sure?' }%>
               <%= link_to "reject","" ,  :'data-toggle'=>"modal", :'data-target'=>"#myModal"%> | 
               <%= link_to "approve", absence_absence_approve_path(@absence) , data: { confirm: 'Are you sure?' }%></td>
             <% else %>
@@ -90,7 +81,6 @@
   <% end %>
 
   <% if !@absence.nil? %>
-    <!-- Modal -->
     <div id="myModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -100,7 +90,6 @@
           </div>
           <div class="modal-body form-group">
             <%= form_for  @absence, url: absence_absence_reject_path(@absence), html: { method: :post } do |f| %>
-              <%#= f.text_field :reject_msg ,:class=>" input-lg form-control"%>
               <%= f.text_area :reject_msg, rows: 5, :class=>" input-lg form-control" %>
           </div>
           <div class="modal-footer">
