--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,9 @@
     
   </div>
 </body>
-<div class="container">
+<div class="container" style="margin-top: 10px;">
+  
+</style>>
   <footer>
     <div class="jumbotron"style="background-color: #31b0d5;">
     </div>  
