--- a/app/views/absences/index.html.erb
+++ b/app/views/absences/index.html.erb
@@ -7,11 +7,11 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th>Reason</th>
+          <th>Reason for leave</th>
           <th>Date</th>
           <th>Manager email</th>
           <th>Status</th>
-          <th colspan="3">show link</th>
+          <th colspan="3">Show link</th>
         </tr>
       </thead>
       <tbody>
@@ -40,12 +40,12 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th>Reason</th>
+          <th>Reason for leave</th>
           <th>Date</th>
           <th>Manager name</th>
-          <th>status</th>
-          <th>actions</th>
-          <th colspan="3">show link</th>
+          <th>Status</th>
+          <th>Actions</th>
+          <th colspan="3">Show link</th>
         </tr>
       </thead>
       <tbody>
